--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body {
     background: linear-gradient( lightcoral, lightblue);
     border-bottom-color: lightblue;
     color: white;
+    line-height: 300%;
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
@@ -11,6 +12,8 @@ h1 {
     width: 20%;
     border: 4px solid white;
     padding: 10px;
+    border-radius: 50%;
+    margin-top: 1%;
 }
 #randomNumber {
     font-size: 4em;
