--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,8 @@ h1 {
     margin: auto;
     width: 10%;
     border: 4px solid white;
-    padding: 10px; 
+    padding: 10px;
+    margin-bottom: 5%; 
 }
 #crystal1, #crystal2, #crystal3, #crystal4 {
     height: 150px;
@@ -59,15 +60,15 @@ h1 {
   @keyframes stretch {
     0% {
       transform: scale(.1);
-      background-color: red;
+      
       border-radius: 100%;
     }
     50% {
-      background-color: orange;
+      
     }
     100% {
       transform: scale(1.0);
-      background-color: yellow;
+      
     }
   }
 
